--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,10 +29,10 @@ android {
 }
 
 dependencies {
-//    compile project(':okhttp3')
-    compile ('com.zhousf.lib:okhttp3:2.9.1.2'){
-        exclude(module:'gson')
-    }
+    compile project(':okhttp3')
+//    compile ('com.zhousf.lib:okhttp3:2.9.1.2'){
+//        exclude(module:'gson')
+//    }
 
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile libSupportAppcompat_v7
